--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,6 +1,6 @@
 development:
   adapter: mysql2
-  database: bazar_development
+  database: luna_development
   pool: 5
   timeout: 5000
   username: root
@@ -9,7 +9,7 @@ development:
 
 test:
   adapter: mysql2
-  database: bazar_test
+  database: luna_test
   pool: 5
   timeout: 5000
   username: root
@@ -17,6 +17,7 @@ test:
 
 production:
   adapter: mysql2
-  database: bazar_production
+  database: luna_production
   pool: 5
   timeout: 5000
+
